--- a/file1.html
+++ b/file1.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>my page</title>
+		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 		<p>
 			my first page on NodeJS
-		</b>
+		</p>
 	</body>
 </html>
