--- a/public/test.html
+++ b/public/test.html
@@ -1,12 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h2>I main page</h2>
-</body>
+<html>
+	<head>
+		<title>{{title}}</title>
+	</head>
+	<body>
+		<header>
+			<nav>
+				<a href="/">главная</a>
+				<a href="/about">о нас</a>
+				<a href="/contacts">контакты</a>
+			</nav>
+		</header>
+		<main>
+			{{{body}}}
+		</main>
+		<footer>
+			footer
+		</footer>
+	</body>
 </html>
